force-app/main/default/objects/Deal_Implementation_Policy__mdt/Deal_Implementation_Policy__mdt.object-meta.xml
<CustomObject><label
  >Deal Implementation Policy</label><pluralLabel
  >Deal Implementation Policies</pluralLabel><visibility
  >Public</visibility></CustomObject>