force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Creation_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Creation_Trigger__c</fullName>
    <label>Creation Trigger</label>
    <length>40</length>
    <type>Text</type>
</CustomField>