force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Default_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Duration_Days__c</fullName>
    <label>Default Duration Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>