force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Default_Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Implementation_Type__c</fullName>
    <label>Default Implementation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>