force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Implementation_Required__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Implementation Required</label>
    <type>Checkbox</type>
</CustomField>