force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Require_Customer_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Require_Customer_Acceptance__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Customer Acceptance</label>
    <type>Checkbox</type>
</CustomField>