force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Require_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Require_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Evidence</label>
    <type>Checkbox</type>
</CustomField>