force-app/main/default/objects/Deal_Implementation_Policy__mdt/fields/Require_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Require_Handoff__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Handoff</label>
    <type>Checkbox</type>
</CustomField>